--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
