--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.2",
+    "proj4": "^2.6.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
