minor style update

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_API_URL = https://still-taiga-23168.herokuapp.com
+#REACT_APP_BASE_API_URL = https://still-taiga-23168.herokuapp.com
 #REACT_APP_BASE_API_URL=http://localhost:8081
-#REACT_APP_BASE_API_URL = https://testing-server1128.herokuapp.com/
+REACT_APP_BASE_API_URL = https://testing-server1128.herokuapp.com
