--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
